--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.38.1",
     "firebase": "^9.13.0",
+    "framer-motion": "^12.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.12.0",
     "react-photo-view": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.6.7",
     "web-vitals": "^2.1.4"
   },
